fix loading spinner alignment

--- a/src/Components/LoadingSpinner/LoadingSpinner.css
+++ b/src/Components/LoadingSpinner/LoadingSpinner.css
@@ -1,5 +1,5 @@
 .lds-dual-ring {
-    display: inline-block;
+    display: block;
     width: 40px;
     height: 40px;
     margin: auto;
